2007-09-16  Soren Sandmann <sandmann@daimi.au.dk>

	* memprof.glade: Rearrange the treeviews. Delete bold labels.
	
	* main.c: More descriptive names for treeview columns.

2007-09-15  Soren Sandmann <sandmann@daimi.au.dk>

	Replace symbol resolution code with sysprof code. Remove
	dependency on libbfd and libiberty.

	* binparser.[ch], elfparser.[ch], binfile.[ch], demangle.c: New
	files.

	* bfdutils.c: delete

2007-09-15  Soren Sandmann <sandmann@daimi.au.dk>

	* memprof.h (struct): Move Symbol struct into process.c

	* profile.c: Use strings instead of symbol structs

2007-09-15  Soren Sandmann <sandmann@daimi.au.dk>

	* stackstash.c: Replace with the one from Sysprof.

	* main.c, profile.c: Update to new API
	
2007-09-15  Soren Sandmann <sandmann@daimi.au.dk>

	* memprof.glade: Remove follow-fork/follow-exec/preferences menu
	items.

	* configure.in, Makefile.am, main.c: Remove gconf dependency

2007-09-14  Jonathan Pryor  <jpryor@novell.com>

	* main.c, profile.c: Add support to save the memory profile to a file.
	  Patch reviewed by Michael Meeks.

2007-08-11  Soren Sandmann <sandmann@daimi.au.dk>

	* Makefile.am (install-exec-hook): Install speedprof in
	DESTDIR. Bug 377176 - patch from Patrick Williams. 

2007-08-11  Soren Sandmann <sandmann@daimi.au.dk>

	* autogen.sh: Run intltoolize in autogen.sh

2007-02-19  Soren Sandmann <sandmann@redhat.com>

	* autogen.sh: Copy this from somewhere else since that makes it
	work on my system.

2006-12-15  Pema Geyleg  <pgeyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS

2006-11-19  Soren Sandmann <sandmann@redhat.com>

	* configure.in: Remove popt dependency, bump gtk+
	requirement to 2.6

	* main.c: Port to GOption

2006-11-19  Soren Sandmann <sandmann@redhat.com>

	* autogen.sh, Makefile.am, configure.in, leakdetect.c, main.c,
	* memprof.glade, process.c, server.c, tree.c: 
	Remove dependency on libgnome and libgnomeui. 
	Improve default window size
	Break option parsing.
